--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
@@ -20,6 +20,9 @@ requirements:
     - pip
   run:
     - python-language-server
+    - mypy
+    - flake8
+    - configparser
 
 test:
   imports:
