Add missing build backend and python_min version to run section

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,9 @@ requirements:
   host:
     - python {{ python_min }}
     - pip
+    - setuptools
   run:
+    - python >={{ python_min }}
     - python-language-server
     - mypy
     - flake8
